kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: squidgames
spec: {}
status: {}
---
