kubernetes/rabbit_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.loadBalancerIP: 35.222.63.100 
    kompose.service.type: LoadBalancer
    kompose.service.updateStrategy: RollingUpdate
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
  namespace: squidgames
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.loadBalancerIP: 35.222.63.100 
        kompose.service.type: LoadBalancer
        kompose.service.updateStrategy: RollingUpdate
        kompose.version: 1.25.0 (a70f80cc)
      creationTimestamp: null
      labels:
        io.kompose.service: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3.9.8-management
          name: rabbit-mq
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.loadBalancerIP: 35.222.63.100 
    kompose.service.type: LoadBalancer
    kompose.service.updateStrategy: RollingUpdate
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq-tcp
  name: rabbitmq-tcp
  namespace: squidgames
spec:
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "15672"
      port: 15672
      targetPort: 15672
  selector:
    io.kompose.service: rabbitmq
  type: LoadBalancer
  loadBalancerIP: "35.222.63.100"
status:
  loadBalancer: 
    ingress:
    - ip: 35.222.63.100
